# salus

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  README.md  Rakefile.toml
.github/: codecov.yml
.github/workflows/: audit.yml  release.yml  salus.yml  test-aur-publish.yml
dev/: .gitignore  salusc.toml  salusd.toml
docker/: Dockerfile.aarch64-unknown-linux-musl  Dockerfile.x86_64-unknown-linux-musl
fuzz/: Cargo.toml
fuzz/artifacts/fuzz_action_decode/: oom-8648ad8a9c22d58f76bc31755f543aa39ece9b42
fuzz/artifacts/fuzz_db_value_decode/: oom-6cb598aaef05e82f7d1262cf49f354efd4d5e8d9
fuzz/artifacts/fuzz_response_decode/: oom-a2b28915f3b2e4b155328c5a344fcf92e44b18ce
fuzz/fuzz_targets/: fuzz_action_decode.rs  fuzz_agent_action_decode.rs  fuzz_agent_registry_decode.rs  fuzz_agent_response_decode.rs  fuzz_agent_unseal.rs  fuzz_db_value_decode.rs  fuzz_find_regex.rs  fuzz_response_decode.rs  fuzz_store_roundtrip.rs  fuzz_unlock_key.rs  regression_action_decode.rs  regression_agent_action_decode.rs  regression_agent_registry_decode.rs  regression_agent_response_decode.rs  regression_agent_unseal.rs  regression_db_value_decode.rs  regression_find_regex.rs  regression_response_decode.rs  regression_store_roundtrip.rs  regression_unlock_key.rs
libsalus/: Cargo.toml
libsalus/src/: lib.rs
libsalus/src/genkey/: mod.rs
libsalus/src/key/: mod.rs
libsalus/src/message/: agent.rs  mod.rs
libsalus/src/search/: mod.rs
packaging/arch/salus/: .SRCINFO  PKGBUILD  salusd.install
packaging/arch/salus-bin/: .SRCINFO  PKGBUILD  salusd.install
packaging/arch/salus/examples/: salus-agent.toml.example  salusd.toml.example
packaging/homebrew/: salus.rb.tmpl
packaging/nfpm/: salus-aarch64.yaml  salus.yaml
packaging/nfpm/scripts/: salus-postinst  salus-rpm-postinst
packaging/scripts/: gen_srcinfo.py
packaging/systemd/: salus-agent.service  salusd.service
salus/: Cargo.toml
salus-agent/: Cargo.toml
salus-agent/src/: error.rs  lib.rs  main.rs  test_keyring.rs  utils.rs
salus-agent/src/config/: mod.rs
salus-agent/src/handler/: mod.rs
salus-agent/src/keystore/: mod.rs
salus-agent/src/logging/: mod.rs
salus-agent/src/runtime/: cli.rs  mod.rs
salus-agent/src/store/: mod.rs
salus/src/: main.rs
salus/src/inter/: mod.rs
salus/src/runtime/: cli.rs  mod.rs
salusc/: Cargo.toml
salusc/src/: error.rs  main.rs
salusc/src/config/: mod.rs
salusc/src/inter/: mod.rs
salusc/src/runtime/: cli.rs  generate.rs  mod.rs
salusd/: Cargo.toml
salusd/src/: error.rs  fuzz.rs  lib.rs  main.rs  utils.rs
salusd/src/config/: mod.rs
salusd/src/db/: mod.rs
salusd/src/db/values/: config.rs  mod.rs  salus.rs
salusd/src/handler/: mod.rs
salusd/src/logging/: mod.rs
salusd/src/runtime/: cli.rs  mod.rs
salusd/src/store/: mod.rs
scripts/: dev_env.fish  run_all.fish  run_install.fish  run_musl.fish
xtask/: Cargo.toml
xtask/src/: main.rs
