[workspace]
resolver = "3"

members = ["libsalus", "salusc", "salusd"]

[workspace.dependencies]
anyhow = "1.0.102"
aws-lc-rs = "1.17.0"
bincode-next = "3.0.0-rc.15"
bon = "3.9.3"
clap = { version = "4.6.1", features = ["derive"] }
config = "0.15.23"
dirs2 = "3.0.1"
getset = "0.1.7"
interprocess = { version = "2.4.2", features = ["async", "tokio"] }
rustversion = "1.0.22"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "time"] }
tracing = { version = "0.1.44", features = [
  "max_level_trace",
  "release_max_level_trace",
] }
zeroize = "1.9.0"
