[workspace]
resolver = "3"

members = ["libsalus", "salus-agent", "salusc", "salusd", "xtask"]

[workspace.dependencies]
anyhow = "1.0.102"
argon2 = "0.5.3"
aws-lc-rs = "1.17.0"
bincode-next = "3.0.0-rc.15"
bon = "3.9.3"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
clap_mangen = "0.3.0"
config = "0.15.23"
dirs2 = "3.0.1"
getset = "0.1.7"
interprocess = { version = "2.4.2", features = ["async", "tokio"] }
keyring = { version = "3.6.3", default-features = false, features = [
  "apple-native",
  "async-secret-service",
  "async-io",
  "crypto-rust",
] }
rand = "0.10.1"
rustversion = "1.0.22"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tracing-subscriber = { version = "0.3.23", features = [
  "env-filter",
  "fmt",
  "time",
] }
tracing-subscriber-init = { version = "0.2.6", features = ["time"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "time"] }
tracing = { version = "0.1.44", features = [
  "max_level_trace",
  "release_max_level_trace",
] }
zeroize = "1.9.0"
