[package]
name = "salus-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[features]
# Forwards to the workspace crates' `unstable` feature so the fuzz targets and
# regression tests can be exercised against unstable code paths. Currently a
# no-op (those `unstable` features are empty), wired up for future use.
unstable = ["libsalus/unstable", "salus-agent/unstable", "salusd/unstable"]

[dependencies]
arbitrary = { version = "1.4.2", features = ["derive"] }
libfuzzer-sys = "0.4.13"
libsalus = { path = "../libsalus" }
salus-agent = { path = "../salus-agent", features = ["fuzzing"] }
salusd = { path = "../salusd", features = ["fuzzing"] }

# Prevent the parent workspace from treating this crate as a member.
[workspace]

[[bin]]
name = "fuzz_action_decode"
path = "fuzz_targets/fuzz_action_decode.rs"
test = false
doc = false

[[bin]]
name = "fuzz_response_decode"
path = "fuzz_targets/fuzz_response_decode.rs"
test = false
doc = false

[[bin]]
name = "fuzz_unlock_key"
path = "fuzz_targets/fuzz_unlock_key.rs"
test = false
doc = false

[[bin]]
name = "fuzz_store_roundtrip"
path = "fuzz_targets/fuzz_store_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "fuzz_find_regex"
path = "fuzz_targets/fuzz_find_regex.rs"
test = false
doc = false

[[bin]]
name = "fuzz_agent_action_decode"
path = "fuzz_targets/fuzz_agent_action_decode.rs"
test = false
doc = false

[[bin]]
name = "fuzz_agent_response_decode"
path = "fuzz_targets/fuzz_agent_response_decode.rs"
test = false
doc = false

[[bin]]
name = "fuzz_agent_unseal"
path = "fuzz_targets/fuzz_agent_unseal.rs"
test = false
doc = false

[[bin]]
name = "fuzz_agent_registry_decode"
path = "fuzz_targets/fuzz_agent_registry_decode.rs"
test = false
doc = false

[[bin]]
name = "fuzz_db_value_decode"
path = "fuzz_targets/fuzz_db_value_decode.rs"
test = false
doc = false

[[test]]
name = "regression_action_decode"
path = "fuzz_targets/regression_action_decode.rs"

[[test]]
name = "regression_response_decode"
path = "fuzz_targets/regression_response_decode.rs"

[[test]]
name = "regression_unlock_key"
path = "fuzz_targets/regression_unlock_key.rs"

[[test]]
name = "regression_store_roundtrip"
path = "fuzz_targets/regression_store_roundtrip.rs"

[[test]]
name = "regression_find_regex"
path = "fuzz_targets/regression_find_regex.rs"

[[test]]
name = "regression_agent_action_decode"
path = "fuzz_targets/regression_agent_action_decode.rs"

[[test]]
name = "regression_agent_response_decode"
path = "fuzz_targets/regression_agent_response_decode.rs"

[[test]]
name = "regression_agent_unseal"
path = "fuzz_targets/regression_agent_unseal.rs"

[[test]]
name = "regression_agent_registry_decode"
path = "fuzz_targets/regression_agent_registry_decode.rs"

[[test]]
name = "regression_db_value_decode"
path = "fuzz_targets/regression_db_value_decode.rs"
