[package]
name = "libsalus"
version = "0.1.0"
edition = "2024"

[features]
unstable = []

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
bon = { workspace = true }
interprocess = { workspace = true }
ssss = "1.0.2"
tracing = { workspace = true }

[build-dependencies]
rustversion = { workspace = true }

[dev-dependencies]
aws-lc-rs = { workspace = true }
rand = "0.9.2"
