[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["cryptography"]
description = "A key/value store protected by secret shares and encryption"
documentation = "https://docs.rs/salus"
edition = "2024"
homepage = "https://github.com/rustyhorde/salus"
keywords = ["shamir", "store", "cryptography", "redb"]
license = "MIT OR Apache-2.0"
name = "libsalus"
readme = "../README.md"
repository = "https://github.com/rustyhorde/salus"
version = "0.1.0"

[features]
unstable = []

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
bon = { workspace = true }
getset = { workspace = true }
interprocess = { workspace = true }
ssss = "1.0.2"
tracing = { workspace = true }

[build-dependencies]
rustversion = { workspace = true }

[dev-dependencies]
aws-lc-rs = { workspace = true }
rand = "0.9.2"
