[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["cryptography"]
description = "A key/value store protected by secret shares and encryption"
documentation = "https://docs.rs/salus"
edition = "2024"
homepage = "https://github.com/rustyhorde/salus"
keywords = ["shamir", "store", "cryptography", "redb"]
license = "MIT OR Apache-2.0"
name = "libsalus"
readme = "../README.md"
repository = "https://github.com/rustyhorde/salus"
rust-version = "1.91.1"
version = "0.1.1"

[features]
unstable = []

[[package.metadata.cargo-matrix.channel]]
name = "default"

[[package.metadata.cargo-matrix.channel]]
name = "linux"

[[package.metadata.cargo-matrix.channel]]
name = "macos"

[dependencies]
anyhow = { workspace = true }
bincode-next = { workspace = true }
bon = { workspace = true }
dirs2 = { workspace = true }
getset = { workspace = true }
interprocess = { workspace = true }
ssss = "1.0.5"
tracing = { workspace = true }
zeroize = { workspace = true }

[build-dependencies]
rustversion = { workspace = true }

[dev-dependencies]
aws-lc-rs = { workspace = true }
rand = "0.10.1"
