[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["cryptography"]
description = "The login agent for the secret store"
documentation = "https://docs.rs/salus"
edition = "2024"
homepage = "https://github.com/rustyhorde/salus"
keywords = ["shamir", "store", "cryptography", "keyring"]
license = "MIT OR Apache-2.0"
name = "salus-agent"
readme = "../README.md"
repository = "https://github.com/rustyhorde/salus"
rust-version = "1.91.1"
version = "0.1.1"

[lib]
name = "salus_agent"
path = "src/lib.rs"

[[bin]]
name = "salus-agent"
path = "src/main.rs"

[features]
unstable = []

[dependencies]
anyhow = { workspace = true }
argon2 = { workspace = true }
aws-lc-rs = { workspace = true }
bincode-next = { workspace = true }
bon = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
dirs2 = { workspace = true }
getset = { workspace = true }
interprocess = { workspace = true }
keyring = { workspace = true }
libsalus = { version = "0.1.1", path = "../libsalus" }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-subscriber-init = { workspace = true }
zeroize = { workspace = true }

[build-dependencies]
rustversion = { workspace = true }
