[package]
name = "salus"
version = "0.1.0"
edition = "2024"

[features]
unstable = []

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
bon = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
crossterm = "0.29.0"
interprocess = { workspace = true }
libsalus = { path = "../libsalus" }
scanpw = "1.0.0"
tokio = { workspace = true, features = ["io-std"] }
tracing = { workspace = true }

[build-dependencies]
rustversion = { workspace = true }
