[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["cryptography"]
description = "The command line client for the salusd daemon"
documentation = "https://docs.rs/salus"
edition = "2024"
homepage = "https://github.com/rustyhorde/salus"
keywords = ["shamir", "store", "cryptography", "redb"]
license = "MIT OR Apache-2.0"
name = "salus"
readme = "../README.md"
repository = "https://github.com/rustyhorde/salus"
version = "0.1.0"

[features]
unstable = []

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
bon = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
crossterm = "0.29.0"
interprocess = { workspace = true }
libsalus = { path = "../libsalus" }
scanpw = "1.0.0"
tokio = { workspace = true, features = ["io-std"] }
tracing = { workspace = true }

[build-dependencies]
rustversion = { workspace = true }
