[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["cryptography"]
description = "The command line client for the salusd daemon"
documentation = "https://docs.rs/salusc"
edition = "2024"
homepage = "https://github.com/rustyhorde/salus"
keywords = ["shamir", "store", "cryptography", "redb"]
license = "MIT OR Apache-2.0"
name = "salusc"
readme = "../README.md"
repository = "https://github.com/rustyhorde/salus"
rust-version = "1.91.1"
version = "0.1.3"

[features]
# Propagate to salus-agent so that coverage/unstable-gated lints stay consistent
# when salusc is built with `--features unstable` (e.g. under cargo-llvm-cov).
unstable = ["salus-agent/unstable"]

[[package.metadata.cargo-matrix.channel]]
name = "default"

[[package.metadata.cargo-matrix.channel]]
name = "linux"

[[package.metadata.cargo-matrix.channel]]
name = "macos"

[dependencies]
anyhow = { workspace = true }
bon = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
crossterm = "0.29.0"
dirs2 = { workspace = true }
interprocess = { workspace = true }
libsalus = { version = "0.1.3", path = "../libsalus" }
salus-agent = { version = "0.1.3", path = "../salus-agent" }
scanpw = "1.0.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { workspace = true, features = ["io-std"] }
tracing = { workspace = true }

[build-dependencies]
rustversion = { workspace = true }
