[package]
name = "salusd"
version = "0.1.0"
edition = "2024"

[features]
unstable = []

[dependencies]
anyhow = { workspace = true }
aws-lc-rs = { workspace = true }
bincode = { workspace = true }
bon = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
dirs2 = "3.0.1"
getset = { workspace = true }
interprocess = { workspace = true }
libsalus = { path = "../libsalus" }
redb = "3.0.2"
serde = { version = "1.0.225", features = ["derive"] }
thiserror = "2.0.16"
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
tracing-subscriber = { version = "=0.3.19", features = ["env-filter", "fmt", "time"] }
tracing-subscriber-init = { version = "0.1.4", features = ["time"] }

[build-dependencies]
rustversion = { workspace = true }
