[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["cryptography"]
description = "The daemon for the secret store"
documentation = "https://docs.rs/salus"
edition = "2024"
homepage = "https://github.com/rustyhorde/salus"
keywords = ["shamir", "store", "cryptography", "redb"]
license = "MIT OR Apache-2.0"
name = "salusd"
readme = "../README.md"
repository = "https://github.com/rustyhorde/salus"
rust-version = "1.91.1"
version = "0.1.0"

[lib]
name = "salusd"
path = "src/lib.rs"

[[bin]]
name = "salusd"
path = "src/main.rs"

[features]
unstable = []
# Exposes the crate-private storage/crypto paths through `salusd::fuzz` for the
# workspace fuzz crate. Not intended for production use.
fuzzing = []

[[package.metadata.cargo-matrix.channel]]
name = "default"
always_deny = ["fuzzing"]

[[package.metadata.cargo-matrix.channel]]
name = "linux"

[[package.metadata.cargo-matrix.channel]]
name = "macos"

[dependencies]
anyhow = { workspace = true }
aws-lc-rs = { workspace = true }
bincode-next = { workspace = true }
bon = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
dirs2 = { workspace = true }
getset = { workspace = true }
interprocess = { workspace = true }
libsalus = { version = "0.1.0", path = "../libsalus" }
redb = "4.1.0"
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.23", features = [
    "env-filter",
    "fmt",
    "time",
] }
tracing-subscriber-init = { version = "0.2.6", features = ["time"] }
zeroize = { workspace = true }

[build-dependencies]
rustversion = { workspace = true }
