[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
name = "xtask"
publish = false
version = "0.1.3"

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }

[build-dependencies]
rustversion = { workspace = true }

[package.metadata.cargo-matrix]
skip-package = true
